Contact | 1. Scrolling to big image only if 75% is not visible2. Fixed css on small contact image click3. Minor css fixes

--- a/css/contact.css
+++ b/css/contact.css
@@ -9,10 +9,6 @@
     display: inline-block;
 }
 
-.contact-image-border-tapped {
-  background: lightgray;
-}
-
 .contact-subsection-title {
   font-size: 1.2em;
   margin: 1em 0 1em;
@@ -45,7 +41,7 @@
 img#contact-images-big-image {
   height: auto;
   width: 100%;
-  margin: 2em auto;
+  margin: auto;
   display: block;
 }
 
@@ -60,7 +56,7 @@ img#contact-images-big-image {
 }
 
 #contact-image-gallery-first-img {
-  transform: translateX(-5%);
+  transform: translateX(-12%);
 }
 
 #contact-image-gallery-third-img {
@@ -89,11 +85,24 @@ img#contact-images-big-image {
 }
 
 #contact-images-big-image-container {
+  margin: 2em auto;
   width: 100%;
 }
 
 .contact-image-border-tapped.contact-image-gallery-border {
-  background-color: rgba(49, 125, 151, 0.301);
+  background-color: rgba(49, 125, 151, 0.3);
   border-color: rgba(1, 109, 145, 0.4);
+}
+
+#contact-images-wrapper .contact-image-border-tapped.contact-image-gallery-border img {
+  opacity: 0.2;
+}
+
+@media screen and (min-width: 768px) {
+
+  .contact-image-border-tapped.contact-image-gallery-border {
+    background-color: rgba(49, 125, 151, 0.5);
+    border-color: rgba(1, 109, 145, 0.6);
+  }
 
 }
