--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 #contact-banner {
-  padding: 1em 0em 1em 2em;
+  padding: 1.5em 2em;
   background-color: rgb(161, 161, 161);
 }
 
@@ -102,6 +102,7 @@ body {
 
 #social-section-container {
   margin: 1em 0;
+  text-align: left;
 }
 
 @media screen and (min-width: 768px) {
@@ -136,7 +137,7 @@ body {
   }
 
   .contact-image-gallery-border:hover {
-    background-color: rgba(49, 125, 151, 0.301);
+    background-color: rgba(49, 125, 151, 0.3);
     border-color: rgba(1, 109, 145, 0.4);
   }
 
